# modern-cpp-template

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  STYLE.md  WORKSPACE  doxygen.conf  flake.nix  meson.build  meson_options.txt  set-name.sh
.github/workflows/: cmake-single-platform.yml
benchmarks/: mylib_benchmark.cpp
benchmarks/plotting/: .gitignore  README.md  flake.nix  requirements.txt  simple_plot.ipynb
benchmarks/plotting/data/: array.py  sys_data.py
docs/: CONAN.md  docs.doxygen
fuzz/: mylib_fuzz.cpp
include/mylib/: BUILD  mylib.hpp
latex/: README.md  paper.tex
src/: BUILD  mylib.cpp
subprojects/: valfuzz.wrap
tests/: mylib_test.cpp
