option('MYLIB_BUILD_SHARED', type: 'boolean', value: 'true', description:'Build shared library')
option('MYLIB_BUILD_STATIC', type: 'boolean', value: 'false', description: 'Build static library')
option('MYLIB_BUILD_TESTS', type: 'boolean', value: 'true', description: 'Build tests')
option('MYLIB_BUILD_NO_OPTIMIZED', type: 'boolean', value: 'false', description: 'Build without optimizations')
option('MYLIB_BUILD_OPTIMIZED_O1', type: 'boolean', value: 'false', description: 'Build with optimizations -O1')
option('MYLIB_BUILD_OPTIMIZED_O2', type: 'boolean', value: 'false', description: 'Build with optimization -O2')
option('MYLIB_BUILD_OPTIMIZED_O3', type: 'boolean', value: 'false', description: 'Build with optimization -O3')
option('MYLIB_BUILD_OPTIMIZED_AGGRESSIVE', type: 'boolean', value: 'false', description: 'Build with maximum optimization')
